--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="nav">
         <div class="collapse" id="navbarToggleExternalContent">
             <div class="bg-dark p-4">
-                <h5 class="text-white h4"> HAPPY DIWALI <img src="images/deepak.jpg" alt="deepak" class="deepak-img">
+                <h5 class="text-white h4"> HAPPY DIWALI <img src="img/deepak.jpg" alt="deepak" class="deepak-img">
                 </h5>
                 <span class="text-muted">Wishing you and your entire family a very Happy Diwali from the Raja Sharma.</span>
             </div>
@@ -37,9 +37,9 @@
     <div class="gif">
          <br>
         <div class="imgs">
-            <img src="images/lakshami ji.jpg" alt="lakshamiji" class="deepak">
-            <img src="images/deepakgif.gif" alt="gif" class="deep">
-            <img src="images/ganesh.jpg" alt="ganeshji" class="deepak">
+            <img src="img/lakshami ji.jpg" alt="lakshamiji" class="deepak">
+            <img src="img/deepakgif.gif" alt="gif" class="deep">
+            <img src="img/ganesh.jpg" alt="ganeshji" class="deepak">
         </div>
         <h1 class="diwali-text">आप को और आपके परिवार को दिवाली की हार्दिक शुभकामनाएं।</h1>
         <div class="music">
@@ -67,11 +67,11 @@
         </div>
     </div>
     <div class="patakha-3">
-        <img src="images/sweet-1.gif" alt="img" class="sweet">
-        <img src="images/sweet-2.gif" alt="img" class="sweet">
-        <img src="images/sweet-3.gif" alt="img"class="sweet">
-        <img src="images/patakha-2.gif" alt="img" class="patakha">
-        <img src="images/patakha-4.gif" alt="img" class="patakha">
+        <img src="img/sweet-1.gif" alt="img" class="sweet">
+        <img src="img/sweet-2.gif" alt="img" class="sweet">
+        <img src="img/sweet-3.gif" alt="img"class="sweet">
+        <img src="img/patakha-2.gif" alt="img" class="patakha">
+        <img src="img/patakha-4.gif" alt="img" class="patakha">
     </div>
     <footer class="footer">
         <h1>Terms and conditions | Copyright ©2022 All rights reserved @ Raja Sharma</h1>
